Assert in TestOptionsWithRanges.java

XMLWordPrintable

    • gc
    • b31
    • Verified

      Test: runtime/CommandLine/OptionsValidation/TestOptionsWithRanges.java

      # Internal Error (/open/src/hotspot/share/runtime/perfMemory.cpp:216), pid=17874, tid=17875
      # assert(_prologue != __null) failed: called before initialization
      #
      # JRE version: (10.0) (fastdebug build )
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 10-internal+0-2017-10-13-2016064.shahinshah.mohammed.kannu.raw.hs, mixed mode, aot, tiered, compressed oops, concurrent mark sweep gc, linux-amd64)

            Assignee:
            Roman Kennke
            Reporter:
            Jesper Wilhelmsson
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: