8189390: Assert in TestOptionsWithRanges.java

Reinstate error handling in CMS heap creation code

Reviewed-by: stefank, sangheki